<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/principal_1">

    <TextView

        android:id="@+id/tvLugar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_padrao"
        android:layout_marginEnd="@dimen/padding_padrao"
        android:layout_weight="1"
        android:text="@string/regiao_pernambuco"
        android:textAlignment="textEnd"
        android:textColor="@color/em_principal"
        android:textSize="@dimen/texto_medio"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPesquisa"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/padding_padrao"
        android:layout_marginTop="@dimen/padding_padrao"
        app:cardCornerRadius="@dimen/raio_menor"
        tools:layout_editor_absoluteX="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvLugar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding_medio"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etPesquisa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pesquisa_exemplo"
                android:inputType="text"
                android:autofillHints="pesquisa" />

            <Button
                android:id="@+id/btnPesquisar"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/verde"
                android:contentDescription="@string/icone_pesquisa"
                android:src="@drawable/imgrecife"

                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/padding_padrao"
        android:backgroundTint="@color/principal_2"
        app:cardCornerRadius="@dimen/raio_padrao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPesquisa">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_padrao"
                android:text="@string/resultados_x"
                android:textAlignment="center"
                android:textColor="@color/em_principal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/em_principal" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLocaisPesquisa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvDigiteAlgoParaPesquisar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/digite_algo_para_pesquisar"
                android:textColor="@color/em_principal"
                android:textSize="@dimen/texto_grande"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/padding_padrao"

                />

            <TextView
                android:id="@+id/tvPesquisaNaoEncontrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nenhum_resultado"
                android:textColor="@color/em_principal"
                android:textSize="@dimen/texto_grande"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/padding_padrao"
                />
            <TextView
                android:id="@+id/tvLimparPesquisa"
                android:minHeight="48dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_menor"
                android:textSize="@dimen/texto_medio"
                android:text="@string/limpar_pesquisa_u"
                android:textColor="@color/link"
                android:textAlignment="center"

                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>