<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/principal_1">
    <TextView
        android:id="@+id/tvNomeEstacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/nome_local"
        android:textSize="@dimen/texto_grande"
        android:textColor="@color/white"
        android:layout_margin="@dimen/padding_padrao"

        />

    <TextView
        android:id="@+id/tvEnderecoEstacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/texto_pequeno"
        android:text="@string/endereco_local"
        android:textColor="@color/em_principal_escuro"
        android:textSize="@dimen/texto_pequeno"
        app:layout_constraintStart_toStartOf="@id/tvNomeEstacao"
        app:layout_constraintTop_toBottomOf="@id/tvNomeEstacao"

        />

    <Button
        android:id="@+id/btnPesquisarRotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesquisar_rotas_desta_estacao"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="134dp"

        android:layout_marginTop="@dimen/padding_maior"
        app:layout_constraintTop_toBottomOf="@id/tvEnderecoEstacao"
        app:layout_constraintStart_toStartOf="@id/tvEnderecoEstacao"/>

</androidx.constraintlayout.widget.ConstraintLayout>