<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principal_1"
    app:layoutDescription="@xml/main_layout_scene">


    <RelativeLayout
        android:id="@+id/rlImagemLocal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:contentDescription="@string/imagem_sua_localizacao"
            android:src="@drawable/imgrecife" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/padding_padrao"

            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_padrao"
                android:layout_weight="1"
                android:text="@string/regiao_pernambuco"
                android:textAlignment="textEnd"
                android:textColor="@color/em_principal"
                android:textSize="@dimen/texto_grande"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/padding_padrao"
        android:layout_marginTop="@dimen/padding_padrao"
        android:layout_marginEnd="@dimen/padding_padrao"
        android:layout_marginBottom="@dimen/padding_padrao"
        android:background="@color/principal_1"
        android:backgroundTint="@color/principal_2"
        app:cardCornerRadius="@dimen/raio_padrao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPesquisa">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_padrao"
                android:text="@string/estacoes_proximas"
                android:textAlignment="center"
                android:textColor="@color/em_principal" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/em_principal" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLocaisPesquisa"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/llFavoritos"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="@color/principal_2"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/principal_c_1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_padrao">

            <ImageView
                android:layout_width="@dimen/icone_pequeno"
                android:layout_height="@dimen/icone_pequeno"
                android:layout_marginEnd="@dimen/padding_menor"
                android:contentDescription="@string/icone_favoritos" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/favoritos"
                android:textColor="@color/em_principal"
                android:textSize="@dimen/texto_medio" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adicionar"
                android:textColor="@color/link"
                android:textSize="@dimen/texto_pequeno" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/tvIrParaOnde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_padrao"
        android:layout_marginTop="135dp"
        android:text="@string/ir_para_onde"
        android:textColor="@color/em_principal"
        android:textSize="@dimen/texto_medio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPesquisa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_padrao"
        android:layout_marginTop="@dimen/padding_miudo"
        android:layout_marginEnd="@dimen/padding_padrao"
        android:padding="@dimen/padding_padrao"
        android:visibility="visible"
        app:cardCornerRadius="@dimen/raio_menor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIrParaOnde">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etPesquisa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_medio"
                android:autofillHints="location"
                android:background="@null"
                android:hint="@string/pesquisa_exemplo"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnPesquisar"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@color/verde"
                android:contentDescription="@string/icone_pesquisa"

                android:src="@drawable/imgrecife"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.motion.widget.MotionLayout>
